# fmt

./: .gitattributes  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  CMakeSettings.json  ChangeLog.md  ChangeLog.rst  README.md  README.rst  conanfile_rtc.py  core.h  fmt.lua  format.h  module.mk  project.mk
.github/workflows/: doc.yml  linux.yml  macos.yml  windows.yml
doc/: CMakeLists.txt  ChangeLog-old.md  api.md  api.rst  build.py  conf.py
doc/_static/: breathe.css
doc/_templates/: layout.html  search.html
doc/basic-bootstrap/: README
doc/bootstrap/: theme.less
include/fmt/: args.h  base.h  chrono.h  color.h  compile.h  core.h  fmt.ipp  format-inl.h  format.cc  format.h  locale.h  os.h  ostream.h  posix.cc  printf.h  ranges.h  std.h  xchar.h
src/: fmt.cc  fmt.ipp  format.cc  os.cc
support/: README  build-docs.py  build.gradle  compute-powers.py  manage.py  printable.py  release.py  rst2md.py
support/bazel/: BUILD.bazel  README.md
support/cmake/: FindSetEnv.cmake  JoinPaths.cmake
test/: CMakeLists.txt  base-test.cc  chrono-test.cc  compile-test.cc  core-test.cc  enforce-checks-test.cc  format-impl-test.cc  format-test.cc  gmock-gtest-all.cc  gtest-extra.h  mock-allocator.h  module-compile-fail.cc  module-test.cc  os-test.cc  ostream-test.cc  perf-sanity.cc  posix-mock-test.cc  prepare-test.cc  printf-test.cc  ranges-test.cc  test-assert.h  test-main.cc  util.h
vs/: ExternalLibraryVersions.props  Gmhpt.Cpp.DontBuild.targets  SolutionConfiguration.props  fmt-module.vcxproj  fmt-module.vcxproj.filters  fmt.sln  fmt.vcxproj  fmt.vcxproj.filters
(+78 files in other folders)
