package(default_visibility = ["//visibility:public"])

filegroup(
    name = "fmt-headers",
    srcs = glob(include=[
      "include/fmt/*.h",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fmt-srcs",
    srcs = glob(include=[
      "src/*.cc",
    ]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "fmt",
    srcs = [":fmt-srcs"],
    hdrs = [":fmt-headers"],
    visibility = ["//visibility:public"],
    strip_include_prefix = "include",
    includes = ["include/fmt"],
    linkstatic = True,
)
